<resources>
    <string name="app_name">记账助手</string>

    <string name="action_settings">Settings</string>
    <string name="record_title">费用明细</string>
    <string name="bill_title">我的账单</string>
    <string name="list_empty">暂无数据</string>
    <string name="button_send">发送</string>
    <string name="button_yes">是</string>
    <string name="button_no">否</string>
    <string name="network_not_available">网络未连接</string>

    <string name="setting_title">设置</string>
    <string name="setting_pannel_category">分类设置</string>
    <string name="setting_pannel_feedback">用户反馈</string>
    <string name="setting_pannel_help">帮助中心</string>
    <string name="setting_pannel_update">检查更新</string>
    <string name="setting_pannel_about">关于</string>

    <string name="category_list_title">分类设置</string>
    <string name="category_list_confirm_del">是否要删除记录？</string>
    <string name="category_list_del_success">删除成功</string>
    <string name="category_add_title">新增分类</string>
    <string name="category_modify_title">编辑分类</string>
    <string name="category_modify_name">名称</string>
    <string name="category_modify_name_hint">2-10个字符</string>
    <string name="category_modify_icon">图标</string>
    <string name="category_modify_save_success">保存成功</string>

    <string name="record_list_confirm_del">是否要删除记录？</string>
    <string name="record_add_title">新增记录</string>
    <string name="record_modify_title">编辑记录</string>
    <string name="record_modify_date">日期</string>
    <string name="record_modify_cost">金额</string>
    <string name="record_modify_cost_hint">请输入金额</string>
    <string name="record_modify_category">分类</string>
    <string name="record_modify_memo">备注</string>
    <string name="record_modify_save_success">保存成功</string>
    <string name="record_modify_delete">删除记录</string>
    <string name="record_modify_delete_success">删除成功</string>
    <string name="record_add_cat">新分类</string>

    <string name="form_add_title">月账单</string>
    <string name="form_modify_name">月份</string>
    <string name="form_modify_name_hint">请输入账单月份，例如：201508</string>
    <string name="form_type_monthly">月账单</string>
    <string name="form_type_custom">自定义账单</string>
    <string name="form_existed">月账单已存在，是否覆盖？</string>
    <string name="form_detail_title">账单详情</string>
    <string name="form_detail_title_name">账单%1$s</string>
    <string name="form_detail_total">合计</string>
    <string name="form_detail_confirm_del">是否要删除账单？</string>
    <string name="form_detail_delete_success">删除成功</string>
    <string name="form_detail_confirm_redo">是否要重新生成账单？</string>

    <string name="feedback_title">用户反馈</string>
    <string name="about_title">关于</string>
    <string name="about_company">广州盈哲计算机科技有限公司</string>
    <string name="help_title">帮助</string>

    <string name="err_1001">账单id不能为0</string>
    <string name="err_1002">附件URI不能为空</string>
    <string name="err_1003">MIME不能为空</string>
    <string name="err_1004">分类id不能为0</string>
    <string name="err_1005">金额不能为0</string>
    <string name="err_1006">备注不能为空</string>
    <string name="err_1007">分类名称不能为空</string>
    <string name="err_1008">分类图标不能为空</string>
    <string name="err_1009">分类名称已经存在</string>
    <string name="err_1010">账单月份不能为空</string>
    <string name="err_1011">对应月份的账单已经存在</string>
    <string name="err_1012">账单数据不能为空</string>
</resources>
