<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/background"
              android:orientation="vertical">
    <!--标题-->
    <include layout="@layout/inc_title"/>

    <!--分类名称-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/panel_white"
        android:gravity="center_vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp">

        <TextView
            style="@style/AppTheme.UI.PannelText.InputTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_modify_name"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:background="@mipmap/ic_split_v"/>

        <EditText
            android:id="@+id/cat_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:hint="@string/category_modify_name_hint"/>
    </LinearLayout>

    <!--分类图标-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/panel_white"
        android:gravity="center_vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp">

        <TextView
            style="@style/AppTheme.UI.PannelText.InputTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_modify_icon"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:background="@mipmap/ic_split_v"/>

        <net.toeach.widget.CustomGridView
            android:id="@+id/cat_icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:listSelector="@color/transparent"
            android:numColumns="5"/>
    </LinearLayout>
</LinearLayout>