<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/background"
              android:orientation="vertical">
    <!--标题-->
    <include layout="@layout/inc_title"/>

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--明细金额-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/panel_white"
                android:gravity="center_vertical"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp">

                <TextView
                    style="@style/AppTheme.UI.PannelText.InputTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/record_modify_cost"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:background="@mipmap/ic_split_v"/>

                <EditText
                    android:id="@+id/cost"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:hint="@string/record_modify_cost_hint"
                    android:inputType="numberDecimal"
                    android:maxLength="10"/>
            </LinearLayout>

            <!--日期-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/panel_white"
                android:gravity="center_vertical"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp">

                <TextView
                    style="@style/AppTheme.UI.PannelText.InputTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/record_modify_date"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:background="@mipmap/ic_split_v"/>

                <TextView
                    android:id="@+id/bill_date"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:background="@color/transparent"/>
            </LinearLayout>

            <!--明细分类-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/panel_white"
                android:gravity="center_vertical"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp">

                <TextView
                    style="@style/AppTheme.UI.PannelText.InputTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/record_modify_category"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:background="@mipmap/ic_split_v"/>

                <net.toeach.widget.CustomGridView
                    android:id="@+id/cat_icon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:listSelector="@color/transparent"
                    android:numColumns="5"
                    android:verticalSpacing="10dp"/>
            </LinearLayout>

            <!--明细备注-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/panel_white"
                android:gravity="center_vertical"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp">

                <TextView
                    style="@style/AppTheme.UI.PannelText.InputTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/record_modify_memo"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:background="@mipmap/ic_split_v"/>

                <EditText
                    android:id="@+id/memo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:gravity="left|top"
                    android:inputType="textMultiLine"
                    android:lines="3"/>
            </LinearLayout>

            <!--删除按钮-->
            <TextView
                android:id="@+id/btn_del"
                style="@style/AppTheme.UI.ButtonRed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center"
                android:text="@string/record_modify_delete"
                android:visibility="gone"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>